   * fixed spelling mistakes in the en_US version
   * updated translations: Czech, Danish, Dutch, Estonian, Esperanto, French,
     German, Italian, Polish, Portuguese (Brazil), Russian, Serbian, Slovak, Swedish
   * updated DejaVuSans font to 2.14
 * multiplayer maps:
    * new maps: The Manzivan Traps, 4p Hamlets
    * revised maps: Blitz, Charge, Den of Onis, Sablestone Delta, Sulla's Ruins
 * units:
    * fixed a bug which prevented a Mermaid Siren picking up a storm trident
    * Complete rewrite of saurian and poacher line descriptions, as well as
      some minor edits to a few other human units.
    * fixed a bug which caused the slow effect being applied twice (bug #8458)
    * death animations for Wose Ancient and Elder, Human Outlaw Thief Male and Female
 * user interface:
    * smarter focus handling when user input is irrelevant to the current focus
      but relevant to another widget
 * WML engine
    * fixed a bug which returned wrong values if a random number was negative

Version 1.2.1:
 * campaigns:
   * Heir to the Throne:
     * Battle_for_Wesnoth: allow Asheviere to recruit non-scout units
   * The South Guard:
     * Proven by the Sword: tell Deoran to go to Westin if the citadel is
       secured (fixes #7360)
 * language and i18n:
   * updated translations: British English, Dutch, Estonian, French, German,
     Italian, Russian, Slovak, Swedish
   * fixed huge list of spelling mistakes in the en_US version
 * multiplayer maps:
   * revised maps: Blitz
   * made the AI recruit less scouts by setting the village_per_scout parameter
 * bug fix
   * correctly use translated team names when available
   * fix the completion when controlling multiple sides (bug #8101, patch #653)
   * first turn of a game is saved again (fixes bug #7909 and bug #8117)
    * fix female units using male frames from time to time
 * sound
   * add advanced sound tab to pref allowing you to play with sample_rate and
     buffer_size options